# Aeon-Architect

./: .aeon.yaml.example  .gitignore  ADAPTIVE_REASONING_FRAMEWORK.md  BACKLOG.md  JUPYTER_GUIDE.md  JUPYTER_QUICK_START.md  LEGACY_LOGGING_ANALYSIS.md  LICENSE  README.md  TEST_US1_US3_ANALYSIS.md  execution.jsonl  fix_notebook_logger.py  prompt_inventory.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_live_llm.py  test_live_llm_debug.py  test_sprint_results.ipynb
.cursor/rules/: specify-rules.mdc
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
aeon/: __init__.py  config.py  exceptions.py
aeon/adaptive/: __init__.py  heuristics.py  models.py
aeon/cli/: __init__.py  main.py
aeon/convergence/: __init__.py  engine.py  models.py
aeon/kernel/: __init__.py  executor.py  orchestrator.py  state.py
aeon/llm/: __init__.py  interface.py
aeon/memory/: __init__.py  interface.py  kv_store.py
aeon/observability/: __init__.py  helpers.py  logger.py  models.py
aeon/orchestration/: __init__.py  context_ops.py  contracts.py  engine.py  errors.py  execution_pass_ops.py  phases.py  refinement.py  step_prep.py  strategy.py  tool_ops.py  ttl.py  validation.py
aeon/plan/: __init__.py  executor.py  models.py  parser.py  prompts.py  recursive.py  validator.py
aeon/prompts/: __init__.py  registry.py
aeon/supervisor/: __init__.py  models.py  repair.py
aeon/tools/: __init__.py  interface.py  invocation.py  models.py  registry.py  repair.py
aeon/validation/: __init__.py  execution_pass.py  models.py  schema.py  semantic.py
docs/: TESTING.md
scripts/setup/: setup_venv.sh
specs/001-aeon-core/: analysison11.17.md  (+6 more)
tests/: __init__.py
tools/: loc_check.py
(+139 files in other folders)
